--- a/address-service.properties
+++ b/address-service.properties
@@ -10,4 +10,4 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-config.value=Thiago Fonseca
+config.value=Thiago Santos Fonseca
