--- a/address-service.properties
+++ b/address-service.properties
@@ -11,3 +11,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 config.value=Thiago Santos Fonseca
+
+security.user.name=admin
+security.user.password=admin123
