--- a/address-service.properties
+++ b/address-service.properties
@@ -10,7 +10,7 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-config.value=Thiago Santos Fonseca
+config.value=Simone Borges
 
 security.user.name=admin
 security.user.password=admin123
