--- a/address-service.properties
+++ b/address-service.properties
@@ -12,5 +12,4 @@ spring.h2.console.path=/h2-console
 
 config.value=Simone Borges
 
-security.user.name=admin
-security.user.password=admin123
+management.security.enabled
