--- a/address-service.properties
+++ b/address-service.properties
@@ -10,6 +10,6 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-config.value=Thiago Fonseca
+config.value=Fonseca Cabuloso
 
 management.security.enabled=false
